<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept_privacy_hint">I have read and agree with the</string>
    <string name="accept_privacy_hint_2">You’ll need to agree to the terms and conditions of the Privacy Policy and User Agreement before proceeding.</string>
    <string name="accumulation">Accumulation</string>
    <string name="add">Add</string>
    <string name="add_device">Add device</string>
    <string name="add_device_tick_01">Searching for nearby Bluetooth devices…</string>
    <string name="add_device_tick_02">No device found to add</string>
    <string name="add_device_tick_03">%1$d connectable devices have been found</string>
    <string name="add_device_tick_04">What should I do if the device cannot be found?</string>
    <string name="add_failed">Failed to add device</string>
    <string name="add_success">Device added successfully</string>
    <string name="added_device_num">Devices added (%1$d)</string>
    <string name="alarm">Alarm</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">MeRGBW</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="atmosphere">Atmosphere</string>
    <string name="aurora">Aurora</string>
    <string name="autumn_gold">Autumn Gold</string>
    <string name="ball">Ball</string>
    <string name="banner_adapter_null_error">Adapter is NULL!</string>
    <string name="birthday">Birthday</string>
    <string name="ble_need_location_content">The app requires your location permission to use Bluetooth Low Energy (BLE). Once denied, some features won’t work.</string>
    <string name="ble_need_location_title">MeRGBW needs location permission.</string>
    <string name="blue">Blue</string>
    <string name="blue_starry_sky">Blue starry sky</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bright">Bright</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="can_device_num">Devices can be added (%1$d)</string>
    <string name="candlelight">Candlelight</string>
    <string name="carnival">Carnival</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chase">Chase</string>
    <string name="choose_site">Select Site</string>
    <string name="choose_time">Choose time</string>
    <string name="christmas">Christmas</string>
    <string name="classic">Classic</string>
    <string name="classic_color">Classic colors</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="color">Color</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="common_color">Common colors</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="complete">Completed</string>
    <string name="confirm">Confirm</string>
    <string name="connected_failed">Connection failed!</string>
    <string name="connected_failed_tick">Please confirm that the device is turned on, move close to the device, keep the phone and device within Bluetooth range, and reconnect again</string>
    <string name="contact_us">Contact Us</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="create_dynamic">New dynamic</string>
    <string name="create_dynamic_tick">Create and save multiple color schemes and generate frame-by-frame animations</string>
    <string name="create_group">Create new group</string>
    <string name="create_group_success">Group created successfully</string>
    <string name="create_static">New static</string>
    <string name="current_is_new">Current version is already the latest</string>
    <string name="current_version">Current version </string>
    <string name="dating">Dating</string>
    <string name="delete">Delete</string>
    <string name="delete_diy_tick">Are you sure you want to delete %1$s?</string>
    <string name="delete_group">Delete group</string>
    <string name="delete_group_success">Group deleted successfully</string>
    <string name="delete_group_tick">Are you sure you want to delete the group %1$s?</string>
    <string name="device">Device</string>
    <string name="device_alias">Device alias</string>
    <string name="device_bind_content">Please press and hold any key on the device for 3 seconds to pair.</string>
    <string name="device_bind_title">Device is pairing</string>
    <string name="device_connecting">Device connecting</string>
    <string name="device_detail">Device details</string>
    <string name="device_info">Device information</string>
    <string name="disco">Disco</string>
    <string name="diy">DIY</string>
    <string name="done">Done</string>
    <string name="dynamic_color">Dynamic</string>
    <string name="edit">Edit</string>
    <string name="effect_01">Interval switching</string>
    <string name="effect_02">Move</string>
    <string name="effect_03">Flow</string>
    <string name="effect_04">Breathe</string>
    <string name="email">Email</string>
    <string name="email_error">The email client was not found.</string>
    <string name="email_error_hint">Please enter the correct email address</string>
    <string name="email_tip">Please set up the email client before you can send emails to us from the app.</string>
    <string name="energy">Energy</string>
    <string name="ephemeral">Ephemeral</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="forgot_password">Forgot password</string>
    <string name="friday">Fri</string>
    <string name="home_welcome">Welcome to MeRGBW</string>
    <string name="login">Login</string>
    <string name="monday">Mon</string>
    <string name="no_device_tick">There is no device at the moment, add it now!</string>
    <string name="password">Password</string>
    <string name="password_error_hint">Please enter the correct password</string>
    <string name="register">Register</string>
    <string name="rename">Rename</string>
    <string name="saturday">Sat</string>
    <string name="save">Save</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_off">Schedule off</string>
    <string name="schedule_off_time">Time</string>
    <string name="schedule_on">Schedule on</string>
    <string name="schedule_on_time">Time</string>
    <string name="schedule_repeat">Repeat</string>
    <string name="sunday">Sun</string>
    <string name="thursday">Thu</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="welcome">Welcome</string>
</resources>