<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@mipmap/bg_main" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/layout_head" android:layout_width="match_parent" android:layout_height="44dp" app:layout_constraintTop_toTopOf="0">
        <ImageView android:id="@+id/iv_back" android:layout_width="36dp" android:layout_height="36dp" android:src="@mipmap/icon_back" android:layout_centerVertical="true" android:layout_marginStart="12dp"/>
        <TextView android:textSize="18sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login" android:layout_centerInParent="true" android:alpha="0.9"/>
    </RelativeLayout>
    <TextView android:textSize="55sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/tv_welcome" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/welcome" android:alpha="0.04" android:layout_marginStart="40dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/layout_head"/>
    <EditText android:textSize="15sp" android:textColor="@color/white" android:textColorHint="#55ffffff" android:id="@+id/et_username" android:background="@null" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginLeft="40dp" android:layout_marginTop="15dp" android:layout_marginRight="40dp" android:hint="@string/email" android:inputType="textEmailAddress" android:layout_marginHorizontal="40dp" app:layout_constraintTop_toBottomOf="@+id/tv_welcome"/>
    <View android:id="@+id/view_email_divider" android:background="#979797" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="40dp" android:layout_marginRight="40dp" android:alpha="0.2" android:layout_marginHorizontal="40dp" app:layout_constraintTop_toBottomOf="@+id/et_username"/>
    <TextView android:textSize="12sp" android:textColor="#e1526d" android:id="@+id/tv_email_error" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:text="@string/email_error_hint" app:layout_constraintStart_toStartOf="@+id/view_email_divider" app:layout_constraintTop_toBottomOf="@+id/view_email_divider"/>
    <EditText android:textSize="15sp" android:textColor="@color/white" android:textColorHint="#55ffffff" android:id="@+id/et_password" android:background="@null" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginLeft="40dp" android:layout_marginRight="40dp" android:hint="@string/password" android:inputType="textPassword" android:layout_marginHorizontal="40dp" app:layout_constraintTop_toBottomOf="@+id/tv_email_error"/>
    <View android:id="@+id/view_password_divider" android:background="#979797" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="40dp" android:layout_marginRight="40dp" android:alpha="0.2" android:layout_marginHorizontal="40dp" app:layout_constraintTop_toBottomOf="@+id/et_password"/>
    <TextView android:textSize="12sp" android:textColor="#e1526d" android:id="@+id/tv_password_error" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:text="@string/password_error_hint" app:layout_constraintStart_toStartOf="@+id/view_password_divider" app:layout_constraintTop_toBottomOf="@+id/view_password_divider"/>
    <TextView android:textSize="13sp" android:textColor="@color/white" android:id="@+id/tv_forget_password" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/forgot_password" android:alpha="0.7" android:layout_marginEnd="35dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/et_password"/>
    <Button android:textSize="16sp" android:textColor="@color/white" android:id="@+id/btn_login" android:background="@drawable/btn_main_solid" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginLeft="40dp" android:layout_marginTop="35dp" android:layout_marginRight="40dp" android:text="@string/login" android:textAllCaps="false" android:layout_marginHorizontal="40dp" app:layout_constraintTop_toBottomOf="@+id/tv_forget_password"/>
    <Button android:textSize="16sp" android:textColor="@color/white" android:id="@+id/btn_register" android:background="@drawable/btn_gray_solid" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginLeft="40dp" android:layout_marginTop="15dp" android:layout_marginRight="40dp" android:text="@string/register" android:alpha="0.7" android:textAllCaps="false" android:layout_marginHorizontal="40dp" app:layout_constraintTop_toBottomOf="@+id/btn_login"/>
</androidx.constraintlayout.widget.ConstraintLayout>
