<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@mipmap/bg_main" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/layout_no_device" android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="70dp" android:src="@mipmap/icon_no_device"/>
        <TextView android:textSize="17sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/home_welcome"/>
        <TextView android:textSize="13sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/no_device_tick" android:alpha="0.5"/>
        <Button android:textSize="16sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@+id/btn_add_device" android:background="@mipmap/bg_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="@string/add_device" android:textAllCaps="false"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/list_device" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginStart="20dp" android:layout_marginEnd="5dp"/>
</FrameLayout>
