<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@mipmap/bg_main" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/layout_head" android:layout_width="match_parent" android:layout_height="44dp">
        <ImageView android:id="@+id/iv_back" android:layout_width="36dp" android:layout_height="36dp" android:src="@mipmap/icon_back" android:layout_centerVertical="true" android:layout_marginStart="12dp"/>
        <TextView android:textSize="18sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/schedule" android:layout_centerInParent="true" android:alpha="0.9"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_group_item_solid" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="15dp" android:layout_marginRight="20dp" android:layout_marginHorizontal="20dp">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <TextView android:textSize="17sp" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@+id/tv_open_title" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/schedule_on" android:layout_weight="1" android:alpha="0.9" android:layout_marginStart="20dp"/>
            <androidx.appcompat.widget.SwitchCompat android:id="@+id/switch_open" android:background="@drawable/icon_switch" android:layout_width="53dp" android:layout_height="28dp" android:thumb="@null" android:layout_marginEnd="18dp"/>
        </LinearLayout>
        <View android:background="#979797" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="20dp" android:layout_marginTop="15dp" android:layout_marginRight="20dp" android:alpha="0.1" android:layout_marginHorizontal="20dp"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/layout_open_time" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/view_divider">
            <TextView android:textSize="15sp" android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@+id/tv_open_time" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/schedule_on_time" android:layout_weight="1" android:layout_marginStart="20dp"/>
            <TextView android:textSize="14sp" android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@+id/tv_open_repeat_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:alpha="0.7"/>
            <ImageView android:layout_gravity="center_vertical" android:layout_width="22dp" android:layout_height="22dp" android:src="@mipmap/icon_arrow_left_white" android:layout_marginStart="4dp" android:layout_marginEnd="11dp"/>
        </LinearLayout>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:id="@+id/tv_open_repeat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/schedule_repeat" android:alpha="0.7" android:layout_marginStart="20dp"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="15dp" android:layout_marginRight="20dp" android:layout_marginBottom="26dp" android:layout_marginHorizontal="20dp">
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_open_week_1" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:checked="true" android:button="@null" android:text="@string/monday" android:layout_weight="1"/>
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_open_week_2" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:button="@null" android:text="@string/tuesday" android:layout_weight="1" android:layout_marginStart="14dp"/>
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_open_week_3" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:button="@null" android:text="@string/wednesday" android:layout_weight="1" android:layout_marginStart="14dp"/>
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_open_week_4" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:button="@null" android:text="@string/thursday" android:layout_weight="1" android:layout_marginStart="14dp"/>
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_open_week_5" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:button="@null" android:text="@string/friday" android:layout_weight="1" android:layout_marginStart="14dp"/>
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_open_week_6" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:button="@null" android:text="@string/saturday" android:layout_weight="1" android:layout_marginStart="14dp"/>
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_open_week_7" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:button="@null" android:text="@string/sunday" android:layout_weight="1" android:layout_marginStart="14dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_group_item_solid" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="15dp" android:layout_marginRight="20dp" android:layout_marginHorizontal="20dp">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <TextView android:textSize="17sp" android:textStyle="bold" android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@+id/tv_close_title" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/schedule_off" android:layout_weight="1" android:alpha="0.9" android:layout_marginStart="20dp"/>
            <androidx.appcompat.widget.SwitchCompat android:id="@+id/switch_close" android:background="@drawable/icon_switch" android:layout_width="53dp" android:layout_height="28dp" android:thumb="@null" android:layout_marginEnd="18dp"/>
        </LinearLayout>
        <View android:background="#979797" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="20dp" android:layout_marginTop="15dp" android:layout_marginRight="20dp" android:alpha="0.1" android:layout_marginHorizontal="20dp"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/layout_close_time" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/view_divider">
            <TextView android:textSize="15sp" android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@+id/tv_close_time" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/schedule_off_time" android:layout_weight="1" android:layout_marginStart="20dp"/>
            <TextView android:textSize="14sp" android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@+id/tv_close_repeat_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:alpha="0.7"/>
            <ImageView android:layout_gravity="center_vertical" android:layout_width="22dp" android:layout_height="22dp" android:src="@mipmap/icon_arrow_left_white" android:layout_marginStart="4dp" android:layout_marginEnd="11dp"/>
        </LinearLayout>
        <TextView android:textSize="15sp" android:textColor="@color/white" android:id="@+id/tv_close_repeat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/schedule_repeat" android:alpha="0.7" android:layout_marginStart="20dp"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="15dp" android:layout_marginRight="20dp" android:layout_marginBottom="26dp" android:layout_marginHorizontal="20dp">
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_close_week_1" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:checked="true" android:button="@null" android:text="@string/monday" android:layout_weight="1"/>
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_close_week_2" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:button="@null" android:text="@string/tuesday" android:layout_weight="1" android:layout_marginStart="14dp"/>
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_close_week_3" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:button="@null" android:text="@string/wednesday" android:layout_weight="1" android:layout_marginStart="14dp"/>
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_close_week_4" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:button="@null" android:text="@string/thursday" android:layout_weight="1" android:layout_marginStart="14dp"/>
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_close_week_5" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:button="@null" android:text="@string/friday" android:layout_weight="1" android:layout_marginStart="14dp"/>
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_close_week_6" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:button="@null" android:text="@string/saturday" android:layout_weight="1" android:layout_marginStart="14dp"/>
            <CheckBox android:textSize="12sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/cb_close_week_7" android:background="@drawable/icon_week_check" android:layout_width="0dp" android:layout_height="match_parent" android:button="@null" android:text="@string/sunday" android:layout_weight="1" android:layout_marginStart="14dp"/>
        </LinearLayout>
    </LinearLayout>
    <Button android:textSize="16sp" android:textColor="@color/white" android:id="@+id/btn_save" android:background="@drawable/btn_main_bg" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginLeft="20dp" android:layout_marginTop="30dp" android:layout_marginRight="20dp" android:layout_marginBottom="40dp" android:text="@string/save" android:textAllCaps="false" android:layout_marginHorizontal="20dp"/>
</LinearLayout>
