<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="#00000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_menu_item_solid" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="15dp" android:layout_marginHorizontal="20dp" app:layout_constraintBottom_toTopOf="@+id/menu_item_4">
        <TextView android:textSize="17sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/menu_item_1" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/rename"/>
        <TextView android:textSize="17sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/menu_item_2" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/edit"/>
        <TextView android:textSize="17sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/menu_item_3" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/delete"/>
    </LinearLayout>
    <TextView android:textSize="17sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/menu_item_4" android:background="@drawable/bg_menu_item_solid" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="20dp" android:text="@android:string/cancel" android:layout_marginHorizontal="20dp" app:layout_constraintBottom_toBottomOf="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
